--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-horizontal-scrolling-menu": "^7.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
     "recharts": "^2.12.3",
     "web-vitals": "^2.1.4"
   },
